@@ -1,4 +1,4 @@
-AC_INIT([Twitux], [0.62], [http://sourceforge.net/tracker/?func=add&group_id=198704&atid=966542], [twitux])
+AC_INIT([Twitux], [0.63], [http://sourceforge.net/tracker/?func=add&group_id=198704&atid=966542], [twitux])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2007-2008 Daniel Morales])
 
