@@ -1,3 +1,9 @@
+2008-07-18  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* configure.in:
+	* data/account_dlg.xml:
+	* src/twitux.h: Start to add support for identi.ca.
+
 2008-05-10  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* src/twitux-parser.c (parser_convert_time): Fix time issue
